# karatel-game

./: .gitignore  README.md  pyproject.toml  requirements.txt
karatel/: __main__.py
karatel-game/: app.py  combat.py  dice.py  gui.py  hero.py  items.py  main.py  professions.py  settings.py  skills.py  ui.py  utils.py
karatel-game/game/: combat.py  dice.py  gui.py  hero.py  items.py  map.py  map_renderer.py  professions.py  skills.py  ui.py  utils.py
karatel/ai/: abstract.py  anthropic.py  constants.py  google.py  openai.py
karatel/api/: fastapi.py  handlers.py  schemas.py
karatel/api/routers/: hero.py  items.py  next_number.py  root.py  tic_tac_toe_3x3.py
karatel/auth/: firebase.py
karatel/core/: game_state_manager.py  hero.py  items.py  map.py  map_model.py  professions.py  skills.py
karatel/logic/: combat.py  map.py  map_logic.py  next_number.py  tic_tac_toe.py  tic_tac_toe_3x3.py  tic_tac_toe_4x4.py
karatel/storage/: abstract.py  firebase_manager.py  json_manager.py  postgresql_manager.py  sqlite_manager.py
karatel/tests/: test_ai.py  test_api.py  test_combats.py  test_firebase_auth.py  test_map_eq.py  test_maps_equal.py
karatel/ui/: abstract.py  web_constants.py  web_elements.py  web_for_testing.py  web_gui.py  web_styles.py
karatel/ui/web/: constants.py  elements.py  gui.py  logic.py
karatel/utils/: constants.py  crypt.py  dice.py  json_manager.py  settings.py  sqlite_manager.py  translate.py  utils.py  xml_manager.py
