[project]
name = "karatel"
version = "0.1.0"
description = "Karatel game project"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "httpx==0.28.1",
    "psycopg==3.2.12",
    "psycopg-binary>=3.2.12",
    "fastapi==0.128.8",
    "uvicorn>=0.40.0",
    "httpx==0.28.1",
    "firebase_admin==7.1.0",
    "requests==2.32.5",
    "pydantic==2.12",
    "pillow==12.1.1",
    "streamlit==1.54.0",
    "bcrypt>=5.0.0",
    "openai>=2.20.0",
    "google-genai==1.63.0",
    "anthropic==0.79.0",
]

[dependency-groups]
dev = [
    "pre_commit>=4.5.1",
    "black>=26.1.0",
    "isort>=7.0.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"