[project]
name = "karatel"
version = "0.1.0"
description = "Karatel game project"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "httpx==0.28.1",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "fastapi==0.136.0",
    "uvicorn==0.44.0",
    "httpx==0.28.1",
    "firebase_admin==7.4.0",
    "requests==2.32.5",
    "pydantic==2.13.1",
    "pillow==12.2.0",
    "streamlit==1.56.0",
    "bcrypt==5.0.0",
    "openai==2.32.0",
    "google-genai==1.73.1",
    "anthropic==0.96.0",
]

[dependency-groups]
dev = [
    "pre_commit",
    "black",
    "isort",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"